[package]
name = "rustyflow_core"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>"
]
edition = "2018"
description = "RustyFlow core"
keywords = [ "fluid", "simulation", "particle", "grid" ]

repository = "https://github.com/CubbyFlow/RustyFlow"

readme = "README.md"
license = "MIT"

[lib]
name = "rustyflow_core"
path = "lib.rs"

[dependencies]
